Development: Replace .collect(Collectors.toList()) with .toList() or Collectors.toCollection() (#5312)